# Context-Aware-Emoji-Toxicity-Detection

./: .env.example  .gitignore  README.md  agent_langchain.py  app.py  build_comprehensive_db.py  complete.py  pyproject.toml  upload_to_cloud.py
.claude/: settings.local.json
data/: knowledge_base_enriched.json  slang_dictionary_complete.json
docs/: PROJECT_REPORT.md
notebooks/: exploration.ipynb
scripts/: build_index.py  build_knowledge_base.py  calibrate_thresholds.py  evaluate.py  update_kb.py
src/emoji_toxicity/: __init__.py  config.py  utils.py
src/emoji_toxicity/detector/: agent.py  classifier.py  pipeline.py  retrieval_gate.py  retriever.py  tools.py
src/emoji_toxicity/evaluation/: baselines.py  context_flip_bench.py  datasets.py  metrics.py  realworld_bench.py  run_eval.py
src/emoji_toxicity/ingestion/: build_kb.py  cldr.py  collectors.py  hatemoji.py  monitor.py  silent_signals.py  slang_extractor.py  urban_dict.py  validation.py
src/emoji_toxicity/vectorstore/: embedder.py  incremental.py  index.py  store.py
tests/: test_core.py
