[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "emoji-toxicity-detector"
version = "0.1.0"
description = "Context-aware emoji toxicity detection using RAG"
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.3",
    "langchain-openai>=0.2",
    "langchain-pinecone>=0.2",
    "langchain-huggingface>=0.1",
    "pinecone>=6.0,<8.0",
    "sentence-transformers>=3.0",
    "openai>=1.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "datasets>=3.0",
    "emoji>=2.0",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "gradio>=5.0",
    "scikit-learn>=1.4",
    "pandas>=2.0",
    "matplotlib>=3.8",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/emoji_toxicity"]

[tool.ruff]
line-length = 100
target-version = "py310"
